# ai-agent-py

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useAgentData.ts  useApprovals.ts  useWebSocket.ts
frontend/src/lib/: api.ts  types.ts  websocket.ts
src/ai_agent/: __init__.py  agent.py  config.py  main.py  tools.py
src/construction/: __init__.py  config.py
src/construction/agents/: __init__.py  base.py  claims_dispute.py  commissioning_turnover.py  compliance_verifier.py  critical_path.py  document_intelligence.py  environmental_sustainability.py  financial_intelligence.py  orchestrator.py  risk_forecaster.py  safety_compliance.py  site_logistics.py  stakeholder_communication.py  supply_chain.py  workforce_labor.py
src/construction/api/: __init__.py  app.py  deps.py  websocket.py
src/construction/db/: __init__.py  engine.py  models.py  repositories.py  seed.py
src/construction/integrations/: __init__.py  autodesk.py  base_client.py  epa_api.py  icc_api.py  ms_project.py  msha_api.py  nfpa_api.py  niosh_api.py  openweathermap.py  osha_api.py  portcast.py  primavera.py  procore.py  terminal49.py  twilio_.py  uptime_institute.py  vizion.py
src/construction/redis_/: __init__.py  client.py  pubsub.py  shared_memory.py
src/construction/schemas/: __init__.py  claims.py  commissioning.py  common.py  communication.py  compliance.py  document.py  environmental.py  financial.py  orchestrator.py  risk.py  safety.py  schedule.py  site_logistics.py  supply_chain.py  workforce.py
src/construction/tasks/: __init__.py  celery_app.py  scheduled.py
tests/: conftest.py  test_agent.py
tests/construction/: __init__.py  test_daily_brief.py  test_e2e_document_contradiction.py  test_e2e_osha_readiness.py  test_e2e_safety_stop_work.py  test_e2e_transformer_delay.py  test_inter_agent.py  test_orchestrator.py
(+149 files in other folders)
