[project]
name = "ai-agent-py"
version = "0.1.0"
description = "An AI agent powered by LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0",
]

[project.scripts]
ai-agent = "ai_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
