[project]
name = "ai-agent-py"
version = "0.1.0"
description = "An AI agent powered by LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.0",
    "duckduckgo-search>=8.1.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",
    "redis[hiredis]>=5.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.28.0",
    "numpy>=2.0",
    "scipy>=1.14",
    "twilio>=9.0",
    "structlog>=24.0",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.scripts]
ai-agent = "ai_agent.main:main"
construction-pm = "construction.api.app:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent", "src/construction"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
